Bug 139767 - Crash enabling development tool & pasting
Summary: Crash enabling development tool & pasting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: implementationError
Depends on:
Blocks: UNO-Object-Inspector
  Show dependency treegraph
 
Reported: 2021-01-19 15:48 UTC by Telesto
Modified: 2021-08-01 04:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-01-19 15:48:07 UTC
Description:
Crash enabling development tool & pasting

Steps to Reproduce:
1. Open Writer
2. Enable development tool under help
3. Paste.. ... if working
4. Disable tool & paste
5. Enable tool and paste again

Actual Results:
Crash (master build TDF.. without debugging tools etc)

Expected Results:
no crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 2081eac430ac69619149e44b453a2d7dda41fc83
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL
Comment 1 Roman Kuznetsov 2021-01-19 18:50:21 UTC
confirm the crash in

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 8c9341120c922ca5eadf64756ea858a84563ee51
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL
Comment 2 Julien Nabet 2021-01-19 20:55:42 UTC
On pc Debian x86-64 with master sources updated today + gtk3, I could reproduce this.
I can reproduce this too with kf5 but not with gen rendering.

Tomaž: one for you?
Comment 3 Tomaz Vajngerl 2021-01-20 10:20:07 UTC
Yes, sure. I'm aware of the crashing.
Comment 4 Telesto 2021-01-20 10:30:24 UTC
(In reply to Tomaz Vajngerl from comment #3)
> Yes, sure. I'm aware of the crashing.

Obviously the wrong place.. lacking of publicity.. But curious what is the development tool supposed to do? Or going to do? I simply clicking it because, well that's new..
Comment 5 Tomaz Vajngerl 2021-01-20 12:47:38 UTC
There will be a blog post and FOSDEM presentation soon. It's work on [1].

[1] https://blog.documentfoundation.org/blog/2020/07/27/tender-for-implementing-support-for-a-dedicated-built-in-uno-object-inspection-tool-in-libreoffice-202007-02/
Comment 6 Commit Notification 2021-02-08 06:25:26 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48a8901a205000e9878c7ee5b4fb26e07ea0a607

tdf#139767 fix crash caused by the selection listener

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Aron Budea 2021-08-01 04:30:24 UTC
Seems fixed to me, I'm assuming the commit from Tomaz fixed it, thanks for that!