tdf#139767 fix crash caused by the selection listener

When development tools window was closed, the selection listener
was still listening and tried to change the selection because it
was never unregistered from the selection supplier. This caused
a crash as it tried to change the object on an non existing
tree view.
This change modifies the selection change listener so that is adds
itself to the selection supplier when constructed and removes
itself from the selection supplier, when the development tools
window is disposed.

Change-Id: Ifcb56aaee8f3c5c71ec609e68ffc78573f1b4179